plugins {
    id 'com.android.application'
}

// 从 Go 源码实时读取 Nebula 版本号
def readNebulaVersion = { ->
    def embedFile = file("${rootProject.projectDir}/../nebula/appfiles/embed.go")
    if (embedFile.exists()) {
        def matcher = embedFile.text =~ /var Version string = "(.+)"/
        if (matcher.find()) {
            def ver = matcher.group(1)
            // "16.18.1" → versionCode: 161801, versionName: "16.18.1"
            def parts = ver.split("\\.")
            def code = parts[0].toInteger() * 10000 + parts[1].toInteger() * 100 + parts[2].toInteger()
            return [versionName: ver, versionCode: code]
        }
    }
    return [versionName: "1.0", versionCode: 1]
}

def nebulaVer = readNebulaVersion()

android {
    namespace 'com.cjxpj.nebula'
    compileSdk 34

    defaultConfig {
        applicationId "com.cjxpj.nebula"
        minSdk 30
        targetSdk 34
        versionCode nebulaVer.versionCode
        versionName nebulaVer.versionName
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xlint:deprecation"
        }
    }

    // .so 放在 jniLibs 目录下，打包时自动包含
    sourceSets {
        main {
            jniLibs.srcDirs = ['src/main/jniLibs']
        }
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.webkit:webkit:1.8.0'
}
